--- a/web/encounterRecord/Battle.xhtml
+++ b/web/encounterRecord/Battle.xhtml
@@ -5,141 +5,129 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core">
 
-    <ui:composition template="/template.xhtml">
+    <ui:composition template="/encounterRecord/EditTemplate.xhtml">
         <ui:define name="title">
             <h:outputText value="『#{campaignMasterController.selectedCampaign.campaignName}/#{scenarioRecordController.selected.name}』のエンカウンター『#{encounterRecordController.selected.name}』 - ラウンド: #{encounterRecordController.selected.round}"></h:outputText>
         </ui:define>
-        <ui:define name="body">
-            <h:form>               
-                <!--
-                   <h:outputText value="#{bundle.ViewEncounterRecordLabel_round}" style="font-size: 20px"/>
-                   <h:outputText value="#{encounterRecordController.selected.round}" title="#{bundle.ViewEncounterRecordTitle_round}" style="font-size: 20px"/>
-                -->
-                <h:outputText value="#{encounterRecordController.selected.comments}" />
 
-                <h:outputText escape="false" style="font-weight: bold" value="エンカウンターメンバーがいません" rendered="#{encounterMemberController.encounterMemberList.size() == 0}"/>
+        <ui:define name="memberList">
+            <h:outputText escape="false" style="font-weight: bold" value="エンカウンターメンバーがいません" rendered="#{encounterMemberController.encounterMemberList.size() == 0}"/>
 
-                <h:panelGroup rendered="#{encounterMemberController.encounterMemberList.size() > 0}">  
+            <h:panelGroup rendered="#{encounterMemberController.encounterMemberList.size() > 0}">  
 
-                    <h:panelGrid columns="7">
-                        <h:commandButton action="#{encounterMemberController.nextTurn()}" value="次のターン" styleClass="smallBold" />
-                        <h:outputLabel value=" "/>                
-                        <h:commandButton action="#{encounterMemberController.previousTurn()}" value="前のターン"/>                                
-                        <h:outputLabel value=" "/>
-                        <h:commandLink value="ラウンドの最初に戻る" action="#{encounterMemberController.resetRound}"/>
-                        <h:outputLabel value="  "/>                     
-                        <h:commandLink value="戦闘の最初に戻る" action="#{encounterMemberController.resetBattle}"/>                    
-                    </h:panelGrid>                
-
-                    <h:panelGrid styleClass="tableGrid">
-
-                        <h:dataTable value="#{encounterMemberController.encounterMemberList}" rules="all" styleClass="w" var="member" binding="#{encounterMemberController.encounterMemberTable}">
-                            <h:column>
-                                <f:facet name="header">
-                                    <h:outputText value="ターン"/>
-                                </f:facet>
-                                <h:outputText value="⇒" style="font-size: 17px; color: #ff3333; font-weight: bold" rendered="#{member.myTurn}"/>
-                            </h:column>                        
-                            <h:column >
-                                <f:facet name="header">
-                                    <h:outputText value="名前" />
-                                </f:facet>
-                                <h:commandLink action="#{encounterMemberController.prepareViewMember}" value="#{member.scenarioCharacterRecord.name}" />
-                            </h:column>  
-                            <h:column >
-                                <f:facet name="header">
-                                    <h:outputText value="クラス"/>
-                                </f:facet>
-                                <h:commandLink onclick="alert('#{member.scenarioCharacterRecord.klass}')" value="有り" rendered="#{member.scenarioCharacterRecord.hasKlass()}" title="#{member.scenarioCharacterRecord.klass}"  styleClass="smallText"/>                            
-                            </h:column>                         
-                            <h:column>
-                                <f:facet name="header">
-                                    <h:outputText value="攻撃・特殊能力" />
-                                </f:facet>
-                                <h:commandLink value="通常" onclick="alert('#{member.scenarioCharacterRecord.attack}')" title="#{member.scenarioCharacterRecord.attack}" styleClass="smallText" />
-                                <h:outputLabel value=" "/>
-                                <h:commandLink value="全力" onclick="alert('#{member.scenarioCharacterRecord.fullAttack}')" title="#{member.scenarioCharacterRecord.fullAttack}" styleClass="smallText"/>                            
-                                <h:outputLabel value=" "/>                            
-                                <h:commandLink value="特殊攻撃" onclick="alert('#{member.scenarioCharacterRecord.specialAttacks}')" title="#{member.scenarioCharacterRecord.specialAttacks}" styleClass="smallText"/>
-                                <h:outputLabel value=" "/>                            
-                                <h:commandLink value="特殊能力" onclick="alert('#{member.scenarioCharacterRecord.specialQualities}')" title="#{member.scenarioCharacterRecord.specialQualities}" styleClass="smallText"/>
-                            </h:column>
-                            <h:column>
-                                <f:facet name="header">
-                                    <h:outputText value="AC"/>
-                                </f:facet>
-                                <h:outputText value="#{member.scenarioCharacterRecord.armorClass}" styleClass="smallText"/>
-                            </h:column>
-                            <h:column>
-                                <f:facet name="header">
-                                    <h:outputText value="ヒットダイス" />
-                                </f:facet>
-                                <h:outputText value="#{member.scenarioCharacterRecord.hitDice}" styleClass="smallText"/>
-                            </h:column>  
-
-                            <h:column>
-                                <f:facet name="header" >
-                                    <h:outputText value="HP"/>
-                                </f:facet>
-                                <h:inputText value="#{member.scenarioCharacterRecord.hitPoint}" style="width: 30px; color: #{encounterMemberController.hpColor}" styleClass="smallText"/>
-                            </h:column>
-
-                            <h:column>
-                                <f:facet name="header">
-                                    <h:outputText value="ダメージ"/>
-                                </f:facet>
-                                <h:inputText value="#{encounterMemberController.hpModifier}" style="width: 30px"/>
-                            </h:column>                    
-
-                            <h:column>
-                                <f:facet name="header">
-                                    <h:outputText value="イニシアチブ"/>
-                                </f:facet>
-                                <h:inputText value="#{member.initiative}" style="width: 30px"/>
-                            </h:column>
-
-                            <h:column>
-                                <f:facet name="header">
-                                    <h:outputText value="コメント"/>
-                                </f:facet>
-                                <h:inputText value="#{member.comments}" styleClass="smallText"/>
-                            </h:column>
-
-                            <h:column>
-                                <f:facet name="header">
-                                    <h:outputText value=""/>
-                                </f:facet>
-                                <h:commandLink action="#{encounterMemberController.decommission}" value="はずす" styleClass="smallText"/>
-                            </h:column>
-                        </h:dataTable>
-                    </h:panelGrid>                        
-
-                    <h:panelGrid columns="5">
-                        <h:commandButton value="イニシアチブランダム入力" action="#{encounterMemberController.setInitiativeByRandom}"/>                                        
-                        <h:commandButton value="HPをリセット" action="#{encounterMemberController.setInitialHitPoint()}"/>                                                            
-
-                        <h:commandLink value="モンスターを追加" action="#{monsterSelectionController.prepareList}" styleClass="smallBold" immediate="true"/>                
-                        <h:outputLabel value="   "/> 
-                        <h:commandLink value="プレイヤーキャラクターを読み込み" action="#{encounterRecordController.reloadPlayerCharacter()}" styleClass="smallBold"/>                                                                                                                                
-                    </h:panelGrid>                
-                </h:panelGroup>
-
-                <hr/>
-
-                <h:panelGrid columns="3">
-                    <h:outputLabel value="エンカウンター名の変更: " for="name" />
-                    <h:inputText id="name" value="#{encounterRecordController.selected.name}" title="#{bundle.EditEncounterRecordTitle_name}" />
+                <h:panelGrid columns="9">
                     <h:commandButton action="#{encounterMemberController.saveEncounterMembers()}" value="保存" styleClass="smallBold"/>                      
-                </h:panelGrid>                   
-                <h:panelGrid columns="2"> 
-                    <h:outputLabel value="メモ " for="description" />
-                    <h:inputTextarea id="comments" styleClass="middleTextArea" value="#{encounterRecordController.selected.comments}" />
-                </h:panelGrid>
-                <br />
-                <h:commandLink action="#{encounterRecordController.prepareList}" value="シナリオ『#{scenarioRecordController.selected.name}』の編集に戻る"/>
-                <br />
-            </h:form>
+                    <h:outputLabel value=" "/>                    
+                    <h:commandButton action="#{encounterMemberController.nextTurn()}" value="次のターン" styleClass="smallBold" />
+                    <h:outputLabel value=" "/>                
+                    <h:commandButton action="#{encounterMemberController.previousTurn()}" value="前のターン" styleClass="smallBold"/>                                
+                    <h:outputLabel value=" "/>
+                    <h:commandLink value="ラウンドの最初に戻る" action="#{encounterMemberController.resetRound}"/>
+                    <h:outputLabel value="  "/>                     
+                    <h:commandLink value="戦闘の最初に戻る" action="#{encounterMemberController.resetBattle}"/>                    
+                </h:panelGrid>                
+
+                <h:panelGrid styleClass="tableGrid">
+
+                    <h:dataTable value="#{encounterMemberController.encounterMemberList}" rules="all" styleClass="w" var="member" binding="#{encounterMemberController.encounterMemberTable}">
+                        <h:column>
+                            <f:facet name="header">
+                                <h:outputText value="ターン"/>
+                            </f:facet>
+                            <h:outputText value="⇒" style="font-size: 17px; color: #ff3333; font-weight: bold" rendered="#{member.myTurn}"/>
+                        </h:column>                        
+                        <h:column >
+                            <f:facet name="header">
+                                <h:outputText value="名前" />
+                            </f:facet>
+                            <h:commandLink action="#{encounterMemberController.prepareViewMember}" value="#{member.scenarioCharacterRecord.name}" />
+                        </h:column>  
+                        <h:column >
+                            <f:facet name="header">
+                                <h:outputText value="クラス"/>
+                            </f:facet>
+                            <h:commandLink onclick="alert('#{member.scenarioCharacterRecord.klass}')" value="有り" rendered="#{member.scenarioCharacterRecord.hasKlass()}" title="#{member.scenarioCharacterRecord.klass}"  styleClass="smallText"/>                            
+                        </h:column>                         
+                        <h:column>
+                            <f:facet name="header">
+                                <h:outputText value="攻撃・特殊能力" />
+                            </f:facet>
+                            <h:commandLink value="通常" onclick="alert('#{member.scenarioCharacterRecord.attack}')" title="#{member.scenarioCharacterRecord.attack}" styleClass="smallText" />
+                            <h:outputLabel value=" "/>
+                            <h:commandLink value="全力" onclick="alert('#{member.scenarioCharacterRecord.fullAttack}')" title="#{member.scenarioCharacterRecord.fullAttack}" styleClass="smallText"/>                            
+                            <h:outputLabel value=" "/>                            
+                            <h:commandLink value="特殊攻撃" onclick="alert('#{member.scenarioCharacterRecord.specialAttacks}')" title="#{member.scenarioCharacterRecord.specialAttacks}" styleClass="smallText"/>
+                            <h:outputLabel value=" "/>                            
+                            <h:commandLink value="特殊能力" onclick="alert('#{member.scenarioCharacterRecord.specialQualities}')" title="#{member.scenarioCharacterRecord.specialQualities}" styleClass="smallText"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <h:outputText value="AC"/>
+                            </f:facet>
+                            <h:outputText value="#{member.scenarioCharacterRecord.armorClass}" styleClass="smallText"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <h:outputText value="ヒットダイス" />
+                            </f:facet>
+                            <h:outputText value="#{member.scenarioCharacterRecord.hitDice}" styleClass="smallText"/>
+                        </h:column>  
+
+                        <h:column>
+                            <f:facet name="header" >
+                                <h:outputText value="HP"/>
+                            </f:facet>
+                            <h:inputText value="#{member.scenarioCharacterRecord.hitPoint}" style="width: 30px; color: #{encounterMemberController.hpColor}" styleClass="smallText"/>
+                        </h:column>
+
+                        <h:column>
+                            <f:facet name="header">
+                                <h:outputText value="ダメージ"/>
+                            </f:facet>
+                            <h:inputText value="#{encounterMemberController.hpModifier}" style="width: 30px"/>
+                        </h:column>                    
+
+                        <h:column>
+                            <f:facet name="header">
+                                <h:outputText value="イニシアチブ"/>
+                            </f:facet>
+                            <h:inputText value="#{member.initiative}" style="width: 30px"/>
+                        </h:column>
+
+                        <h:column>
+                            <f:facet name="header">
+                                <h:outputText value="コメント"/>
+                            </f:facet>
+                            <h:inputText value="#{member.comments}" styleClass="smallText"/>
+                        </h:column>
+
+                        <h:column>
+                            <f:facet name="header">
+                                <h:outputText value=""/>
+                            </f:facet>
+                            <h:commandLink action="#{encounterMemberController.decommission}" value="はずす" styleClass="smallText"/>
+                        </h:column>
+                    </h:dataTable>
+                </h:panelGrid>                        
+
+                <h:panelGrid columns="5">
+                    <h:commandButton value="イニシアチブランダム入力" action="#{encounterMemberController.setInitiativeByRandom}"/>                                        
+                    <h:commandButton value="HPをリセット" action="#{encounterMemberController.setInitialHitPoint()}"/>                                                            
+
+                    <h:commandLink value="モンスターを追加" action="#{monsterSelectionController.prepareList}" styleClass="smallBold" immediate="true"/>                
+                    <h:outputLabel value="   "/> 
+                    <h:commandLink value="プレイヤーキャラクターを読み込み" action="#{encounterRecordController.reloadPlayerCharacter()}" styleClass="smallBold"/>                                                                                                                                
+                </h:panelGrid>                
+            </h:panelGroup>
+            <hr/>            
+        </ui:define>            
+
+        <ui:define name="commandButton">
+            <h:panelGrid style="width: 100%" columns="">
+                <h:commandButton action="#{encounterMemberController.saveEncounterMembers()}" value="保存" styleClass="smallBold"/>                      
+            </h:panelGrid>  
         </ui:define>
+
     </ui:composition>
 
 </html>
