--- a/web/encounterRecord/Create.xhtml
+++ b/web/encounterRecord/Create.xhtml
@@ -5,33 +5,16 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core">
 
-    <ui:composition template="/template.xhtml">
-        <ui:define name="title">
-            <h:outputText value="『#{campaignMasterController.selectedCampaign.campaignName}/#{scenarioRecordController.selected.name}』の新規エンカウンターの作成"></h:outputText>
-        </ui:define>
-       <ui:define name="body">
-            <h:form>          
+    <ui:composition template="/encounterRecord/EditTemplate.xhtml">
+
+       <ui:define name="commandButton">
                 <h:panelGrid style="width: 100%" columns="2">
-                    <h:commandButton action="#{encounterMemberController.saveEncounterMembers()}" value="作成" styleClass="smallBold"/>                      
+                    <h:commandButton action="#{encounterRecordController.create()}" value="作成" styleClass="smallBold"/>                      
                     <h:panelGrid style="text-align: right; width: 100%" >
-                        <h:commandButton action="/scenarioRecord/Edit" value="キャンセル"/>                                        
+                        <h:commandButton action="#{encounterRecordController.prepareList()}" value="キャンセル"/>                                        
                     </h:panelGrid>
                 </h:panelGrid>  
-                
-                <h:panelGrid columns="3">
-                    <h:outputLabel value="エンカウンター名: " for="name" />
-                    <h:inputText id="name" value="#{encounterRecordController.selected.name}" title="#{bundle.EditEncounterRecordTitle_name}" />
-                </h:panelGrid> 
-
-                <h:panelGrid columns="2"> 
-                    <h:outputLabel value="メモ " for="description" />
-                    <h:inputTextarea id="comments" styleClass="middleTextArea" value="#{encounterRecordController.selected.comments}" />
-                </h:panelGrid>
-                <br />
-                <h:commandLink action="#{encounterRecordController.prepareList}" value="シナリオ『#{scenarioRecordController.selected.name}』の編集に戻る"/>
-                <br />
-            </h:form>
-        </ui:define>
+         </ui:define>
     </ui:composition>
 
 </html>
